# flepimop2

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  conftest.py  justfile  mkdocs.yml  pyproject.toml  versions.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yaml  feature_request.md
.github/actions/setup-just-and-uv/: action.yaml
.github/workflows/: ci.yaml  gh-pages.yaml  release.yaml  yaml.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/assets/: SIR.py  solve_ivp.py
0.1/authors/: index.html
0.1/changelog/: index.html
0.1/connectors/: index.html
0.1/development/adding-a-new-cli-command/: index.html
0.1/development/contributing/: index.html
0.1/development/creating-a-release/: index.html
0.1/development/creating-an-external-provider-package/: index.html
0.1/development/implementing-custom-engines-and-systems/: index.html
0.1/development/integration-testing/: index.html
0.1/funding-acknowledgement/: index.html
0.1/guides/getting-started/: index.html
0.1/guides/scenarios/: index.html
0.1/license/: index.html
0.1/reference/cli/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  objects.inv  sitemap.xml
0.2/assets/: config.yaml  scenarios_config.yaml
0.2/assets/postprocessing_workflow/: config.yaml
0.2/assets/quickstart_workflow/: config.yaml
0.2/authors/: index.html
0.2/changelog/: index.html
0.2/citation/: index.html
0.2/connectors/: index.html
0.2/development/adding-a-new-cli-command/: index.html
0.2/development/contributing/: index.html
0.2/development/creating-a-release/: index.html
0.2/development/creating-an-external-provider-package/: index.html
0.2/development/implementing-custom-engines-and-systems/: index.html
0.2/development/integration-testing/: index.html
0.2/funding-acknowledgement/: index.html
0.2/guides/getting-started/: index.html
0.2/guides/install/: index.html
0.2/guides/scenarios/: index.html
0.2/guides/vaccination-campaign-scenario-grid-example/: index.html
0.2/license/: index.html
0.2/reference/cli/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/assets/full_feature_workflow/: SIR_plot.R  SIR_plot_op_engine.py  environment.yaml
0.3/assets/quickstart_workflow/: environment.yaml
0.3/authors/: index.html
0.3/changelog/: index.html
0.3/citation/: index.html
0.3/connectors/: index.html
0.3/development/adding-a-new-cli-command/: index.html
0.3/development/contributing/: index.html
0.3/development/creating-a-release/: index.html
0.3/development/creating-an-external-provider-package/: index.html
0.3/development/customizing-module-appearances/: index.html
0.3/development/implementing-custom-engines-and-systems/: index.html
0.3/development/integration-testing/: index.html
0.3/development/pydantic-for-modelers/: index.html
0.3/funding-acknowledgement/: index.html
0.3/guides/batch-jobs/: index.html
0.3/guides/getting-started/: index.html
0.3/guides/install/: index.html
0.3/guides/modular-configuration/: index.html
0.3/guides/scenarios/: index.html
0.3/guides/vaccination-campaign-scenario-grid-example/: index.html
0.3/license/: index.html
0.3/reference/cli/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  sitemap.xml
0.4/authors/: index.html
0.4/changelog/: index.html
0.4/citation/: index.html
0.4/connectors/: index.html
0.4/development/adding-a-new-cli-command/: index.html
0.4/development/contributing/: index.html
0.4/funding-acknowledgement/: index.html
0.4/license/: index.html
0.4/search/: search_index.json
0.4/stylesheets/: branding.css
docs/: .gitignore  connectors.md  funding-acknowledgement.md  index.md
docs/assets/: SIR.py  config.yaml  plot_scenarios.R  scenarios_config.yaml  solve_ivp.py
docs/development/: adding-a-new-cli-command.md  creating-a-release.md  creating-an-external-provider-package.md  customizing-module-appearances.md  implementing-custom-engines-and-systems.md  implementing-custom-parameters.md  integration-testing.md  pydantic-for-modelers.md
docs/guides/: batch-jobs.md  getting-started.md  install.md  modular-configuration.md  scenarios.md  vaccination-campaign-scenario-grid-example.md
docs/reference/: cli.md
overrides/partials/: footer.html
scripts/: api-reference.py  authors.py  citation.py  generate_docs_downloads.py  release.py
src/flepimop2/: __init__.py  _cache.py  _parameters.py  _testing.py  axis.py  flepilog.py  logging.py  meta.py  module.py  simulator.py  testing.py  typing.py  yaml.py
tests/: test__cache.py  test__version__.py
tests/_cli/: test_cli_command_class.py  test_format_command.py  test_job_command.py  test_patch_command.py
tests/_parameters/: test_parameter_collection_class.py
tests/_utils/: test__checked_partial.py
tests/axis/: test_axis_class.py  test_axis_collection_class.py
tests/backend/: test_csv_backend_class.py
tests/backends/: test_csv_backend_class.py
tests/cli/: test_format_command.py  test_job_command.py  test_patch_command.py
tests/configuration/: test_configuration_model_class.py  test_fixed_parameter_specification_model_class.py  test_identifier_string_type.py
tests/engine/: test_engine_abc.py  test_engine_wrapper.py
tests/logging/: test_click_handler_class.py  test_get_script_logger.py  test_logging_level_class.py
tests/module/: test_module_abc_class.py  test_to_yaml_data.py
tests/parameter/: test_fixed_parameter_class.py  test_fixed_parameter_runtime.py  test_parameter_abc_class.py  test_parameter_value_class.py
tests/pattern/: test_build.py  test_default_pattern_class.py  test_pattern_abc_class.py
tests/process/: test_process_shell.py
tests/scenario/: test_scenario_grid.py
tests/simulator/: test_simulator_class.py
tests/system/: test_system_abc.py  test_system_adapter.py  test_system_bind.py  test_system_wrapper.py
tests/typing/: test_identifier_string_type.py
tests/yaml/: test_yaml_serializable_base_model.py
(+292 files in other folders)
