[project]
name = "flepimop2"
version = "0.1.0"
description = "The flexible epidemic modeling pipeline"
readme = "README.md"
authors = [
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" }
]
requires-python = ">=3.11,<=3.14"
dependencies = [
    "click>=8.3.0",
    "numpy>=2.2.6",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
flepimop2 = "flepimop2._cli._cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.3",
    "sybil[pytest]>=9.2.0",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/",
    "src/flepimop2/",
    "tests/",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",   # Missing trailing comma, not needed when used with the formatter
    "CPY001",   # Missing copyright notice at top of file
    "D203",     # 1 blank line required before class docstring
    "D212",     # Multi-line docstring summary should start at the first line
    "PLR2004",  # Consider replacing magic number with a constant variable
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "INP001",   # Implicit namespace package
    "PLC2701",  # Private name import from external module
    "S101",     # Use of `assert` detected
    "SLF001",   # Private member accessed
]

[tool.ruff.lint.pydocstyle]
convention = "google"
