[project]
name = "flepimop2"
version = "0.1.0"
description = "The flexible epidemic modeling pipeline"
readme = "README.md"
authors = [
    { name = "Carl Pearson", email = "cap1024@unc.edu" },
    { name = "Joshua Macdonald", email = "jmacdo16@jh.edu" },
    { name = "Timothy Willard", email = "twillard@unc.edu" }
]
requires-python = ">=3.11,<3.15"
dependencies = [
    "click>=8.3.0",
    "numpy>=2.2.6",
    "pydantic>=2.12.2",
    "pyyaml>=6.0.3",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

[project.scripts]
flepimop2 = "flepimop2._cli._cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mike>=2.1.3",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.3",
    "mkdocs-click>=0.9.0",
    "mkdocs-material>=9.6.22",
    "mkdocstrings[python]>=0.30.1",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.3",
    "scipy>=1.17.0",
    "scipy-stubs>=1.17.0.2",
    "sybil[pytest]>=9.2.0",
    "types-pyyaml>=6.0.12.20250915",
    "yamllint>=1.37.1",
]

[tool.pytest.ini_options]
testpaths = [
    "docs/",
    "src",
    "tests/",
]
addopts = ["--import-mode=importlib", "--doctest-modules"]
markers = [
    "integration: marks integration tests in tests/integration/",
]

[tool.ruff.format]
preview = true
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
preview = true
select = [
    "ALL",
]
ignore = [
    "COM812",   # Missing trailing comma, not needed when used with the formatter
    "CPY001",   # Missing copyright notice at top of file
    "D203",     # 1 blank line required before class docstring
    "D212",     # Multi-line docstring summary should start at the first line
    "INP001",   # Implicit namespace package
    "PLC2701",  # Private name import from external module
    "PLR2004",  # Consider replacing magic number with a constant variable
    "RUF067",   # Non-trivial `__init__.py` file detected
]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = [
    "PLR6301",  # Method could be a function, class method, or static method
    "S101",     # Use of `assert` detected
    "SLF001",   # Private member accessed
]
"scripts/**/*" = [
    "T201",     # Use of `print` detected
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
mypy_path = ["src"]
files = "."
exclude = ["^build/", "^site/"]
namespace_packages = true
explicit_package_bases = true
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/flepimop2"]
include = ["src/flepimop2/templates"]

[tool.coverage.report]
fail_under = 75
precision = 1
